add cli actions
